@startuml

package ImageCapture
{
    interface ICapture
    {
        # curFrame : cv::Mat
        # active : bool
        # thread : std::thread
        # updateMutex : std::mutex
        + //setRoi(roi : const cv::Point2f[4], width : float, height : float) : void//
        + //getFrame() : cv::Mat//
        + //stop() : void//
        # //update() : void//
    }

    class Capture
    {
        - targetROI : cv::Point2f[4]
        - cap : cv::VideoCapture
        + Capture(device:int)
    }

    class MockCapture
    {
        - img : cv::Mat
        - targetROI : std::array<cv::Point2f, 4>
        + MockCapture(imgPath : const std::string&)
    }

    class CameraConfig
    {
        - file : std::ifstream
        + CameraConfig(filepath : const string&)
        + getValue(key : const string&) : string
    }

    class V4L2Settings <<struct>>
    {
        + id : int
        + name : string
        + menu_items : map<string, int>
    }
}

ICapture <|. Capture
ICapture <|.. MockCapture
Capture -> "1" CameraConfig

Capture --> "1" V4L2Settings

@enduml